# rosflight_firmware

./: .astylerc  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md  build_all.sh  build_varmint.sh  fix-code-style.sh  fix-format-varmint.sh  local_test.sh  main.c  mavlink.h  mkdocs.yml  param_description.md  param_parser.py  run_tests.sh  unit_test.sh
.github/: .release-please-manifest.json  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  release-please-config.json
boards/varmint/: CMakeLists.txt  STM32H753VIHX_FLASH.ld  varmint.ioc
boards/varmint/include/: BoardConfig.h  Callbacks.h  Varmint.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
boards/varmint/include/board/: Adc.h  Adis165xx.h  Bmi088.h  Bmi088_config.h  Bmi08_defs.h  BoardConfig.h  ByteFifo.h  Callbacks.h  CubeMX.h  DlhrL20G.h  Dps310.h  Driver.h  Iis2mdc.h  PacketFifo.h  Packets.h  Pwm.h  Sbus.h  Sd.h  Spi.h  Telem.h  Time64.h  Ubx.h  Vcp.h  misc.h  sandbox.h
boards/varmint/include/drivers/: Bmi088.h  Bmi088_config.h  DlhrL20G.h  Pwm.h  Sbus.h  Time64.h  Ubx.h
boards/varmint/lib-st/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
boards/varmint/lib/usb_device/App/: usbd_desc.c
boards/varmint/src/: Varmint.cpp  main.c  main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c
boards/varmint/src/board/: Adc.cpp  Adis165xx.cpp  Bmi088.cpp  Callbacks.cpp  DlhrL20G.cpp  Dps310.cpp  Iis2mdc.cpp  Pwm.cpp  Sbus.cpp  Sd.cpp  Telem.cpp  Ubx.cpp  Vcp.cpp  misc.cpp  sandbox.cpp
boards/varmint/src/drivers/: Bmi088.cpp  DlhrL20G.cpp  Dps310.cpp  Pwm.cpp  Sbus.cpp  Sd.cpp  Telem.cpp
boards/varmint_h7/common/: CMakeLists.txt  Callbacks.h  CommonConfig.h  STM32H743.svd  STM32H753.svd  STM32H7LinkerScript.ld  Varmint.cpp  Varmint.h  sandbox.h
boards/varmint_h7/common/AL94_USB_Composite/: AL94.I-CUBE-USBD-COMPOSITE_conf.h  usbd_cdc_acm.c  usbd_cdc_acm.h  usbd_cdc_acm_if.c  usbd_cdc_acm_if.h  usbd_composite.h  usbd_conf.c  usbd_conf.c-mod  usbd_conf.h  usbd_core.c  usbd_core.h  usbd_ctlreq.c  usbd_ctlreq.h  usbd_def.h  usbd_desc.h  usbd_ioreq.c
boards/varmint_h7/common/async/: async_mutex.h  awaitables.h  coroutine_task.h  event_dispatch.cpp  event_dispatch.h
boards/varmint_h7/common/drivers/: Adc.cpp  Adc.h  Adis165xx.cpp  Adis165xx.h  Auav.cpp  Auav.h  Bmi088.cpp  Bmi088.h  Bmi088_config.h  DlhrL20G.cpp  DlhrL20G.h  Dps310.cpp  Dps310.h  Driver.h  Gpio.h  Icm42688.cpp  Icm42688.h  Iis2mdc.cpp  Iis2mdc.h  Ist8308.cpp  Ist8308.h  Ist8310.cpp  Ist8310.h  Lidarlitev3hp.cpp  Lidarlitev3hp.h  M9nUbx.cpp  M9nUbx.h  Mcp4017.h  Mpu.cpp  Mpu.h  Ms4525.cpp  Ms4525.h  Ms5611.cpp  Ms5611.h  PacketFifo.h  Packets.h  Pmw3901.cpp  Pmw3901.h  Polling.cpp  Polling.h  (+20 more)
boards/varmint_h7/common/drivers/gps/: GpsDriver.cpp  GpsDriver.h  GpsNull.h  Liv4f.cpp  Liv4f.h  Ubx.cpp  Ubx.h
boards/varmint_h7/common/drivers/imu/: Adis165xx.cpp  Adis165xx.h  Bmi088.cpp  Bmi088.h  ImuDriver.h
boards/varmint_h7/common/sensor_drivers/: Adc.cpp  Adis165xx.cpp  Bmi088.cpp  Bmi088.h  ByteFifo.h  DlhrL20G.cpp  DoubleBuffer.h  Dps310.h  Ist8308.cpp  Ist8308.h  Mpu.cpp  Ms4525.h  Pwm.h  Sbus.cpp  Sd.cpp  Spi.h  Time64.h  bmi08_defs.h  misc.cpp  misc.h
boards/varmint_h7/pixhawk_6c_mini/: CMakeLists.txt  icm42688_driver_audit.md  icm42688_register_matrix.md
boards/varmint_h7/pixhawk_6c_mini/Core/Inc/: BoardConfig.h  Callbacks.h  Pixhawk6CMiniBoard.h  main.h  stm32h7xx_hal_conf.h
boards/varmint_h7/pixhawk_6c_mini/Core/Src/: Pixhawk6CMiniBoard.cpp  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
boards/varmint_h7/pixhawk_6c_mini/drivers/: M9n.cpp  M9n.h  M9nUbx.cpp  M9nUbx.h
cmake/: stm32_gcc.cmake
common/: CMakeLists.txt  CMakeListsCommon.cmake  Callbacks.h  CommonConfig.h  STM32H7LinkerScript.ld  Varmint.cpp  Varmint.h  sandbox.h
common/AL94_USB_Composite/: AL94.I-CUBE-USBD-COMPOSITE_conf.h-ignore  usb_device.c  usb_device.h  usb_otg.h  usbd_composite.c  usbd_conf.c  usbd_desc.c  usbd_ioreq.h
common/AL94_USB_Composite/App/: usb_device.c  usb_device.h  usbd_cdc_acm_if.c  usbd_cdc_acm_if.h  usbd_desc.c  usbd_desc.h
common/AL94_USB_Composite/Class/CDC_ACM/Inc/: usbd_cdc_acm.h
common/AL94_USB_Composite/Class/CDC_ACM/Src/: usbd_cdc_acm.c
common/AL94_USB_Composite/Class/COMPOSITE/Inc/: usbd_composite.h
common/AL94_USB_Composite/Class/COMPOSITE/Src/: usbd_composite.c
common/AL94_USB_Composite/Core/Inc/: usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
common/AL94_USB_Composite/Core/Src/: usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
common/USB_AL94/: AL94.I-CUBE-USBD-COMPOSITE_conf.h-ignore  LICENSE.txt  usb_device.c  usb_device.h  usbd_cdc.c  usbd_cdc.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_composite.c  usbd_composite.h  usbd_conf.c  usbd_conf.h  usbd_core.c  usbd_core.h  usbd_ctlreq.c  usbd_ctlreq.h  usbd_def.h  usbd_desc.c  usbd_desc.h  usbd_ioreq.c  usbd_ioreq.h
common/drivers/: Adc.cpp  Adc.h  Adis165xx.cpp  Adis165xx.h  Auav.cpp  Auav.h  Bmi088.cpp  Bmi088.h  Bmi088_config.h  ByteFifo.h  DlhrL20G.cpp  DlhrL20G.h  Dps310.cpp  Dps310.h  Driver.h  Eng094x.cpp  Eng094x.h  Iis2mdc.cpp  Iis2mdc.h  Ist8308.cpp  Ist8308.h  Mcp4017.h  Mpu.cpp  Ms4525.cpp  Ms4525.h  PacketFifo.h  Packets.h  Polling.cpp  Polling.h  Pwm.cpp  Pwm.h  Sbus.cpp  Sbus.h  Sd.cpp  Sd.h  Spi.h  Status.h  Telem.cpp  Telem.h  Time64.h  (+7 more)
doc/: estimator.tex  library.bib  mixer.tex  rc.tex
docs/: bus_sharing_proposal.md  index.md  requirements.txt
include/: arming_fsm.h  board.h  comm_link.h  mode.h  (+32 more)
test/: CMakeLists.txt  board.h  command_manager_test.cpp  common.cpp  common.h  config_manager_test.cpp  estimator_test.cpp  gtest_setup.md  main.cpp  parameters_test.cpp  rosbag_parser.cpp  rosflight_test.cpp  sample.cpp  sensors_battery_test.cpp  state_machine_test.cpp  test_board.cpp  test_board.h  test_board_config_manager.cpp  test_board_config_manager.h  turbotrig_test.cpp
test/estimator/: Makefile  estimator_test.c
test/interface/: LICENSE  README.md  board.h  comm_link.h  rosflight_structs.h
(+358 files in other folders)
